--- a/Finacial assistant Project/requirements.txt
+++ b/Finacial assistant Project/requirements.txt
@@ -10,6 +10,7 @@ pandas==2.3.3
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dateutil==2.9.0.post0
+python-multipart==0.0.21
 pytz==2025.2
 six==1.17.0
 starlette==0.50.0
